2005-05-31  Mark Grondona <mgrondona@llnl.gov>
	
	* src/pdsh/dsh.c (dsh) : Don't call _increase_nofile_limit() until after 
	  mod_rcmd_init().

2005-05-09  Albert Chu <chu11@llnl.gov>

	Added genders querying support to -g and -X options.

	* src/modules/genders.c (genders_init): New function.

	* src/modules/genders.c (genders_fini): Call lt_dlclose
	  appropriately.  Fix prototype to match ModExitF type and return 0.
	
	* src/modules/genders.c (_read_genders_attr): Modified
	  appropriately to call genders_query if it is available.
	
	* src/modules/genders.c (_read_genders): Renamed 'attr' local var
	  to 'query'.  

	* doc/pdsh.1.in: Updated information on -g and -X options
	  appropriately.

2005-03-28  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_qshell.m4, config/ac_mqshell.m4 : Abort configure script 
	  when --with-qshell or --with-mqshell is supplied and PAM support
	  cannot be found (instead of silently deactivating these options).

	* Makefile.am : Remove redundant install and uninstall hooks from top-
	  level Makefile. (reported by Tsung-i Mark Huan <tihuang@cs.uh.edu>)

2005-03-18  Mark Grondona <mgrondona@llnl.gov>

	* README.QsNet : Add reference to Quadrics' pdsh FAQ.

2005-03-12  Mark Grondona <mgrondona@llnl.gov>

	* src/common/xpoll.c : Move include of sys/types.h above sys/select.h
	  for OS X. (patch from Andrew Mortensen <admorten@umich.edu>).

2005-01-10  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec.in : Update path to xinetd init script as reported by 
	  Daniel Blueman <daniel.blueman@quadrics.com> for compatibility
	  with SuSE.

2005-01-07  Mark Grondona <mgrondona@llnl.gov>

	* src/qsnet/qswutil.c (qsw_have_elan3) : Fix bug in m/qshd which
	  caused pdsh to fail on nodes without an elan3 adapter.
	  (patch supplied by Daniel Blueman <daniel.blueman@quadrics.com>)

2004-12-08  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/mcmd.c : Update to mrsh protocol version 2.1,
	  which allows mrsh over "localhost."
